--- a/EdTech_Project (7).ipynb
+++ b/EdTech_Project (7).ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Extraa Learn Project Statement (Given question)"
+        "# Extraa Learn Project"
       ],
       "metadata": {
         "id": "-7dV0oN21M4u"
